--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
         <title>404 Page not found - KURURU Blog</title><meta name="description" content="About FeelIt Theme"><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="About FeelIt Theme" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://rick00kim.github.io/404.html" />
+<meta property="og:url" content="https://rick00kim.github.io/kururu-blog/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
@@ -15,15 +15,15 @@
 <meta name="application-name" content="FeelIt">
 <meta name="apple-mobile-web-app-title" content="FeelIt"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://rick00kim.github.io/404.html" /><link rel="stylesheet" href="/css/page.min.css"><link rel="stylesheet" href="/css/home.min.css"></head><body data-header-desktop="" data-header-mobile=""><script>(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('dark' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'dark' === 'dark')) && document.body.setAttribute('theme', 'dark');</script>
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://rick00kim.github.io/kururu-blog/404.html" /><link rel="stylesheet" href="/kururu-blog/css/page.min.css"><link rel="stylesheet" href="/kururu-blog/css/home.min.css"></head><body data-header-desktop="" data-header-mobile=""><script>(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('dark' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'dark' === 'dark')) && document.body.setAttribute('theme', 'dark');</script>
 
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="KURURU Blog">KURURU Blog</a>
+            <a href="/kururu-blog/" title="KURURU Blog">KURURU Blog</a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item" href="/kururu-blog/posts/"> Posts </a><a class="menu-item" href="/kururu-blog/tags/"> Tags </a><a class="menu-item" href="/kururu-blog/categories/"> Categories </a><a class="menu-item" href="/kururu-blog/categories/documentation/"> Docs </a><a class="menu-item" href="/kururu-blog/about/"> About </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
+            <div class="menu-inner"><a class="menu-item" href="/kururu-blog/kururu-blog/posts/"> Posts </a><a class="menu-item" href="/kururu-blog/kururu-blog/tags/"> Tags </a><a class="menu-item" href="/kururu-blog/kururu-blog/categories/"> Categories </a><a class="menu-item" href="/kururu-blog/kururu-blog/categories/documentation/"> Docs </a><a class="menu-item" href="/kururu-blog/kururu-blog/about/"> About </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
                         <input type="text" placeholder="Search titles or contents..." id="search-input-desktop">
                         <a href="#" class="search-button search-toggle" id="search-toggle-desktop" title="Search">
                             <i class="fas fa-search fa-fw"></i>
@@ -44,7 +44,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="KURURU Blog">KURURU Blog</a>
+                <a href="/kururu-blog/" title="KURURU Blog">KURURU Blog</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
@@ -66,7 +66,7 @@
                     <a href="#" class="search-cancel" id="search-cancel-mobile">
                         Cancel
                     </a>
-                </div><a class="menu-item" href="/kururu-blog/posts/" title="">Posts</a><a class="menu-item" href="/kururu-blog/tags/" title="">Tags</a><a class="menu-item" href="/kururu-blog/categories/" title="">Categories</a><a class="menu-item" href="/kururu-blog/categories/documentation/" title="">Docs</a><a class="menu-item" href="/kururu-blog/about/" title="">About</a><div class="menu-item"><a href="javascript:void(0);" class="theme-switch" title="Switch Theme">
+                </div><a class="menu-item" href="/kururu-blog/kururu-blog/posts/" title="">Posts</a><a class="menu-item" href="/kururu-blog/kururu-blog/tags/" title="">Tags</a><a class="menu-item" href="/kururu-blog/kururu-blog/categories/" title="">Categories</a><a class="menu-item" href="/kururu-blog/kururu-blog/categories/documentation/" title="">Docs</a><a class="menu-item" href="/kururu-blog/kururu-blog/about/" title="">About</a><div class="menu-item"><a href="javascript:void(0);" class="theme-switch" title="Switch Theme">
                     <i class="fas fa-adjust fa-fw"></i>
                 </a>
             </div></div>
@@ -80,7 +80,7 @@
                 <div class="container"><div class="page" id="content-404">
         <h2>404</h2>
         <p>The page you&#39;re looking for doesn&#39;t exist. Sorry.</p>
-        <a href="/" title="Home">Home</a>
+        <a href="/kururu-blog/" title="Home">Home</a>
         <a href="javascript:void(0);" title="Back" onclick="window.history.back();">Back</a>
     </div></div>
             </main>
@@ -89,4 +89,4 @@
 
         <div id="fixed-buttons"><a href="#" id="back-to-top" class="fixed-button" title="Back to Top">
                 <i class="fas fa-chevron-up fa-fw"></i>
-            </a></div><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script src="/lib/autocomplete/autocomplete.min.js"></script><script src="/lib/algoliasearch/algoliasearch-lite.umd.min.js"></script><script src="/lib/lazysizes/lazysizes.min.js"></script><script>window.config={"code":{"maxShownLines":10},"search":{"algoliaAppID":"UAL0NNJWXE","algoliaIndex":"index.en","algoliaSearchKey":"7b7fbdfb7ee82ee61901f2c6b09b05be","highlightTag":"em","maxResultLength":10,"noResultsFound":"No results found","snippetLength":30,"type":"algolia"}};</script><script src="/js/theme.min.js"></script></body></html>
+            </a></div><link rel="stylesheet" href="/kururu-blog/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/kururu-blog/lib/animate/animate.min.css"><script src="/kururu-blog/lib/autocomplete/autocomplete.min.js"></script><script src="/kururu-blog/lib/algoliasearch/algoliasearch-lite.umd.min.js"></script><script src="/kururu-blog/lib/lazysizes/lazysizes.min.js"></script><script>window.config={"code":{"maxShownLines":10},"search":{"algoliaAppID":"UAL0NNJWXE","algoliaIndex":"index.en","algoliaSearchKey":"7b7fbdfb7ee82ee61901f2c6b09b05be","highlightTag":"em","maxResultLength":10,"noResultsFound":"No results found","snippetLength":30,"type":"algolia"}};</script><script src="/kururu-blog/js/theme.min.js"></script></body></html>
