--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
             <a href="/kururu-blog/" title="KURURU Blog">KURURU Blog</a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item" href="/kururu-blog/kururu-blog/posts/"> Posts </a><a class="menu-item" href="/kururu-blog/kururu-blog/tags/"> Tags </a><a class="menu-item" href="/kururu-blog/kururu-blog/categories/"> Categories </a><a class="menu-item" href="/kururu-blog/kururu-blog/categories/documentation/"> Docs </a><a class="menu-item" href="/kururu-blog/kururu-blog/about/"> About </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
+            <div class="menu-inner"><a class="menu-item" href="/kururu-blog/posts/"> Posts </a><a class="menu-item" href="/kururu-blog/tags/"> Tags </a><a class="menu-item" href="/kururu-blog/categories/"> Categories </a><a class="menu-item" href="/kururu-blog/categories/documentation/"> Docs </a><a class="menu-item" href="/kururu-blog/about/"> About </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
                         <input type="text" placeholder="Search titles or contents..." id="search-input-desktop">
                         <a href="#" class="search-button search-toggle" id="search-toggle-desktop" title="Search">
                             <i class="fas fa-search fa-fw"></i>
@@ -77,7 +77,7 @@
                     <a href="#" class="search-cancel" id="search-cancel-mobile">
                         Cancel
                     </a>
-                </div><a class="menu-item" href="/kururu-blog/kururu-blog/posts/" title="">Posts</a><a class="menu-item" href="/kururu-blog/kururu-blog/tags/" title="">Tags</a><a class="menu-item" href="/kururu-blog/kururu-blog/categories/" title="">Categories</a><a class="menu-item" href="/kururu-blog/kururu-blog/categories/documentation/" title="">Docs</a><a class="menu-item" href="/kururu-blog/kururu-blog/about/" title="">About</a><div class="menu-item"><a href="javascript:void(0);" class="theme-switch" title="Switch Theme">
+                </div><a class="menu-item" href="/kururu-blog/posts/" title="">Posts</a><a class="menu-item" href="/kururu-blog/tags/" title="">Tags</a><a class="menu-item" href="/kururu-blog/categories/" title="">Categories</a><a class="menu-item" href="/kururu-blog/categories/documentation/" title="">Docs</a><a class="menu-item" href="/kururu-blog/about/" title="">About</a><div class="menu-item"><a href="javascript:void(0);" class="theme-switch" title="Switch Theme">
                     <i class="fas fa-adjust fa-fw"></i>
                 </a>
             </div></div>
@@ -88,7 +88,7 @@
 <div class="search-dropdown mobile">
     <div id="search-dropdown-mobile"></div>
 </div><main class="main">
-                <div class="container"><div class="page home" data-home="posts"><div class="home-profile"><div class="home-avatar"><a href="/kururu-blog/kururu-blog/posts/" title="Posts"><img
+                <div class="container"><div class="page home" data-home="posts"><div class="home-profile"><div class="home-avatar"><a href="/kururu-blog/posts/" title="Posts"><img
         class="lazyload"
         src="/kururu-blog/svg/loading.min.svg"
         data-src="/images/avatar.webp"
