--- a/about/index.html
+++ b/about/index.html
@@ -42,7 +42,7 @@
             <a href="/kururu-blog/" title="KURURU Blog">KURURU Blog</a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item" href="/kururu-blog/kururu-blog/posts/"> Posts </a><a class="menu-item" href="/kururu-blog/kururu-blog/tags/"> Tags </a><a class="menu-item" href="/kururu-blog/kururu-blog/categories/"> Categories </a><a class="menu-item" href="/kururu-blog/kururu-blog/categories/documentation/"> Docs </a><a class="menu-item" href="/kururu-blog/kururu-blog/about/"> About </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
+            <div class="menu-inner"><a class="menu-item" href="/kururu-blog/posts/"> Posts </a><a class="menu-item" href="/kururu-blog/tags/"> Tags </a><a class="menu-item" href="/kururu-blog/categories/"> Categories </a><a class="menu-item" href="/kururu-blog/categories/documentation/"> Docs </a><a class="menu-item active" href="/kururu-blog/about/"> About </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
                         <input type="text" placeholder="Search titles or contents..." id="search-input-desktop">
                         <a href="#" class="search-button search-toggle" id="search-toggle-desktop" title="Search">
                             <i class="fas fa-search fa-fw"></i>
@@ -85,7 +85,7 @@
                     <a href="#" class="search-cancel" id="search-cancel-mobile">
                         Cancel
                     </a>
-                </div><a class="menu-item" href="/kururu-blog/kururu-blog/posts/" title="">Posts</a><a class="menu-item" href="/kururu-blog/kururu-blog/tags/" title="">Tags</a><a class="menu-item" href="/kururu-blog/kururu-blog/categories/" title="">Categories</a><a class="menu-item" href="/kururu-blog/kururu-blog/categories/documentation/" title="">Docs</a><a class="menu-item" href="/kururu-blog/kururu-blog/about/" title="">About</a><div class="menu-item"><a href="javascript:void(0);" class="theme-switch" title="Switch Theme">
+                </div><a class="menu-item" href="/kururu-blog/posts/" title="">Posts</a><a class="menu-item" href="/kururu-blog/tags/" title="">Tags</a><a class="menu-item" href="/kururu-blog/categories/" title="">Categories</a><a class="menu-item" href="/kururu-blog/categories/documentation/" title="">Docs</a><a class="menu-item" href="/kururu-blog/about/" title="">About</a><div class="menu-item"><a href="javascript:void(0);" class="theme-switch" title="Switch Theme">
                     <i class="fas fa-adjust fa-fw"></i>
                 </a>
             </div></div>
