Modify kururu-blog [29/11/2021 02:33] Add new page ssh-authentication

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -110,7 +110,7 @@
         alt="/kururu-blog/images/avatar.webp"
         title="/kururu-blog/images/avatar.webp" /></div><h2>KURURU Blog</h2><div class="subtitle">Happy programmer</div><div class="links"><a href="https://github.com/Rick00Kim" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw"></i></a><a href="https://linkedin.com/in/kuhyun-kim-160b9a161" title="LinkedIn" target="_blank" rel="noopener noreffer me"><i class="fab fa-linkedin fa-fw"></i></a><a href="mailto:dreamx119@gmail.com" title="Email" rel=" me"><i class="far fa-envelope fa-fw"></i></a></div></div>
     <div class="grid bottom">
-    <div class="info"><p><i class="fas fa-building fa-fw"></i>&nbsp;Company:<span>Recurit</span></p>
+    <div class="info"><p><i class="fas fa-building fa-fw"></i>&nbsp;Company:<span>Recruit group</span></p>
         <hr><p><i class="fas fa-briefcase fa-fw fa-fw"></i>&nbsp;Occupation:<span>System engineer</span></p>
         <hr><p><i class="fas fa-map-marker-alt fa-fw"></i>&nbsp;Location:<span>Japan</span></p>
         <hr></div>
@@ -150,7 +150,7 @@
             </div>
         </div></div>
     <div class="content exp">
-        <p></p>
+        <p>I have a strong responsibility for my work(<strong>RESPONSIBILITY</strong>), I always think about improving the quality of the project(<strong>QUALITY</strong>). My MBTI (InWork: <a href="https://www.16personalities.com/enfj-personality">ENFJ</a>, InUsual: <a href="https://www.16personalities.com/infp-personality">INFP</a>)</p>
     </div>
 </div>
 
