Modify kururu-blog [26/12/2021 03:27] Add private project(parking-area)

--- a/public/en/about/index.html
+++ b/public/en/about/index.html
@@ -5,10 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <title>Who is KURURU - KURURU Blog</title><meta name="description" content="About FeelIt Theme"><meta property="og:title" content="Who is KURURU" />
-<meta property="og:description" content="SUMMARY 일본에서 4년간 System engineer로 활약중인 김구현입니다. 2년간 Java와 Spring framework 를 이용한 Web application (API, View),
-Batch application 개발팀의 Back-end position에서 일했으며, 현재는 주로 부서내 유지보수와 Live server의 에러 발생시 조사 및 긴급대응,
-DataDog을 통한 Server Monitoring, CI/CD(Jenkins) 를 통한 Module 품질개선의 자동화 및 Release 자동화 등을 하고 있습니다.
-Unix, Linux 환경에서 주로 업무를 진행하기때문에, 기본 Unix 운영체제의 동작환경을 이해하고 있습니다.
+<meta property="og:description" content="SUMMARY 일본에서 4년간 System engineer로 활약중인 김구현입니다. 2년간 Java와 Spring framework 를 이용한 Web application (API, View), Batch application 개발팀의 Back-end position에서 일했으며, 현재는 주로 부서내 유지보수와 Live server의 에러 발생시 조사 및 긴급대응, DataDog을 통한 Server Monitoring, CI/CD(Jenkins) 를 통한 Module 품질개선의 자동화 및 Release 자동화 등을 하고 있습니다. Unix, Linux 환경에서 주로 업무를 진행하기때문에, 기본 Unix 운영체제의 동작환경을 이해하고 있습니다.
 WORK HISTORY    일자 (from) 일자 (to) 회사명 담당 상세업무     2020." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://rick00kim.github.io/kururu-blog/en/about/" /><meta property="article:section" content="" />
@@ -17,10 +14,7 @@ WORK HISTORY    일자 (from) 일자 (to) 회사명 담당 상세업무     2020
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Who is KURURU"/>
-<meta name="twitter:description" content="SUMMARY 일본에서 4년간 System engineer로 활약중인 김구현입니다. 2년간 Java와 Spring framework 를 이용한 Web application (API, View),
-Batch application 개발팀의 Back-end position에서 일했으며, 현재는 주로 부서내 유지보수와 Live server의 에러 발생시 조사 및 긴급대응,
-DataDog을 통한 Server Monitoring, CI/CD(Jenkins) 를 통한 Module 품질개선의 자동화 및 Release 자동화 등을 하고 있습니다.
-Unix, Linux 환경에서 주로 업무를 진행하기때문에, 기본 Unix 운영체제의 동작환경을 이해하고 있습니다.
+<meta name="twitter:description" content="SUMMARY 일본에서 4년간 System engineer로 활약중인 김구현입니다. 2년간 Java와 Spring framework 를 이용한 Web application (API, View), Batch application 개발팀의 Back-end position에서 일했으며, 현재는 주로 부서내 유지보수와 Live server의 에러 발생시 조사 및 긴급대응, DataDog을 통한 Server Monitoring, CI/CD(Jenkins) 를 통한 Module 품질개선의 자동화 및 Release 자동화 등을 하고 있습니다. Unix, Linux 환경에서 주로 업무를 진행하기때문에, 기본 Unix 운영체제의 동작환경을 이해하고 있습니다.
 WORK HISTORY    일자 (from) 일자 (to) 회사명 담당 상세업무     2020."/>
 <meta name="application-name" content="FeelIt">
 <meta name="apple-mobile-web-app-title" content="FeelIt"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
@@ -164,9 +158,9 @@ WORK HISTORY    일자 (from) 일자 (to) 회사명 담당 상세업무     2020
 
 </div><div class="single-card"><div class="content" id="content"><h2 id="summary">SUMMARY</h2>
 <p>일본에서 4년간 System engineer로 활약중인 김구현입니다.
-2년간 Java와 Spring framework 를 이용한 Web application (API, View),<br>
-Batch application 개발팀의 Back-end position에서 일했으며, 현재는 주로 부서내 유지보수와 Live server의 에러 발생시 조사 및 긴급대응,<br>
-DataDog을 통한 Server Monitoring, CI/CD(Jenkins) 를 통한 Module 품질개선의 자동화 및 Release 자동화 등을 하고 있습니다.<br>
+2년간 Java와 Spring framework 를 이용한 Web application (API, View), <br>
+Batch application 개발팀의 Back-end position에서 일했으며, 현재는 주로 부서내 유지보수와 Live server의 에러 발생시 조사 및 긴급대응, <br>
+DataDog을 통한 Server Monitoring, CI/CD(Jenkins) 를 통한 Module 품질개선의 자동화 및 Release 자동화 등을 하고 있습니다. <br>
 Unix, Linux 환경에서 주로 업무를 진행하기때문에, 기본 Unix 운영체제의 동작환경을 이해하고 있습니다.</p>
 <h2 id="work-history">WORK HISTORY</h2>
 <table>
