Modify kururu-blog [18/02/2022 00:30] Modify Homepage description

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
-        <title>Who is KURURU - KURURU Blog</title><meta name="description" content="About FeelIt Theme"><meta property="og:title" content="Who is KURURU" />
+        <title>Who is KURURU - KURURU Blog</title><meta name="description" content="꾸루루 개발블로그입니다"><meta property="og:title" content="Who is KURURU" />
 <meta property="og:description" content="SUMMARY 4년간 일본에서 Backend, Devops enginner로 일하는 김구현입니다. 고객관리 및 거래내역관리 Web application를 Java와 Spring framework를 이" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://rick00kim.github.io/kururu-blog/about/" /><meta property="article:section" content="" />
