--- a/public/en/about/index.html
+++ b/public/en/about/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
-        <title>Who is KURURU - KURURU Blog</title><meta name="description" content="About FeelIt Theme"><meta property="og:title" content="Who is KURURU" />
+        <title>Who is KURURU - KURURU Blog</title><meta name="description" content="Welcome to Kururu blog"><meta property="og:title" content="Who is KURURU" />
 <meta property="og:description" content="SUMMARY Hello, My name is Kuhyun Kim. I&rsquo;m system engineer in Japan. I have been worked 3 years in develop team. I was implement web application; API, view and Batch application. Both using Java and Spring framework. And I&rsquo;m current working in Operation team. I mainly do support for Develop teams, server monitoring, writing script for automation and Release to production system. Because of my current work environment, I am comfortable working on Linux or Unix systems more than Windows system." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://rick00kim.github.io/kururu-blog/en/about/" /><meta property="article:section" content="" />
