--- a/public/en/index.html
+++ b/public/en/index.html
@@ -5,14 +5,14 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
-        <title>KURURU Blog</title><meta name="description" content="About FeelIt Theme"><meta property="og:title" content="KURURU Blog" />
-<meta property="og:description" content="About FeelIt Theme" />
+        <title>KURURU Blog</title><meta name="description" content="Welcome to Kururu blog"><meta property="og:title" content="KURURU Blog" />
+<meta property="og:description" content="Welcome to Kururu blog" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://rick00kim.github.io/kururu-blog/en/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="KURURU Blog"/>
-<meta name="twitter:description" content="About FeelIt Theme"/>
+<meta name="twitter:description" content="Welcome to Kururu blog"/>
 <meta name="application-name" content="FeelIt">
 <meta name="apple-mobile-web-app-title" content="FeelIt"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/kururu-blog/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/kururu-blog/favicon-32x32.png">
@@ -24,7 +24,7 @@
         "url": "https:\/\/rick00kim.github.io\/kururu-blog\/en\/","inLanguage": "en","author": {
                 "@type": "Person",
                 "name": "Rick_Kim"
-            },"description": "About FeelIt Theme","name": "KURURU Blog"
+            },"description": "Welcome to Kururu blog","name": "KURURU Blog"
     }
     </script></head><body data-header-desktop="" data-header-mobile=""><script>(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('dark' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'dark' === 'dark')) && document.body.setAttribute('theme', 'dark');</script>
 
