--- a/offline/index.html
+++ b/offline/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=robots content="noodp">
-<title>Offline - KURURU Blog</title><meta name=description content="About FeelIt Theme"><meta name=application-name content="FeelIt">
+<title>Offline - KURURU Blog</title><meta name=description content="꾸루루 개발블로그입니다"><meta name=application-name content="FeelIt">
 <meta name=apple-mobile-web-app-title content="FeelIt"><meta name=theme-color content="#ffffff"><meta name=msapplication-TileColor content="#da532c"><link rel="shortcut icon" type=image/x-icon href=/kururu-blog/favicon.ico>
 <link rel=icon type=image/png sizes=32x32 href=/kururu-blog/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=/kururu-blog/favicon-16x16.png><link rel=apple-touch-icon sizes=180x180 href=/kururu-blog/apple-touch-icon.png><link rel=mask-icon href=/safari-pinned-tab.svg color=#5bbad5><link rel=manifest href=/kururu-blog/site.webmanifest><link rel=canonical href=https://rick00kim.github.io/kururu-blog/offline/><link rel=stylesheet href=/kururu-blog/css/home.min.css></head><body><script>(window.localStorage&&localStorage.getItem('theme')?localStorage.getItem('theme')==='dark':'dark'==='auto'?window.matchMedia('(prefers-color-scheme: dark)').matches:'dark'==='dark')&&document.body.setAttribute('theme','dark')</script><div class=wrapper>
