--- a/public/en/about/index.html
+++ b/public/en/about/index.html
@@ -14,8 +14,8 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Who is KURURU"/>
 <meta name="twitter:description" content="SUMMARY Hello, My name is Kuhyun Kim. I&rsquo;m system engineer in Japan. I have been worked 3 years in develop team. I was implement web application; API, view and Batch application. Both using Java and Spring framework. And I&rsquo;m current working in Operation team. I mainly do support for Develop teams, server monitoring, writing script for automation and Release to production system. Because of my current work environment, I am comfortable working on Linux or Unix systems more than Windows system."/>
-<meta name="application-name" content="FeelIt">
-<meta name="apple-mobile-web-app-title" content="FeelIt"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><meta name="google-site-verification" content="twGvePo9HJ-p7TvsvuVzFVC1fnVGRCkQ-MIxc0X4U90" />
+<meta name="application-name" content="KururuTechBlog">
+<meta name="apple-mobile-web-app-title" content="KururuTechBlog"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><meta name="google-site-verification" content="twGvePo9HJ-p7TvsvuVzFVC1fnVGRCkQ-MIxc0X4U90" />
 <link rel="shortcut icon" type="image/x-icon" href="/kururu-blog/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/kururu-blog/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/kururu-blog/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/kururu-blog/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/kururu-blog/site.webmanifest"><link rel="canonical" href="https://rick00kim.github.io/kururu-blog/en/about/" /><link rel="stylesheet" href="/kururu-blog/css/about.min.css"><link rel="stylesheet" href="/kururu-blog/css/page.min.css"><link rel="stylesheet" href="/kururu-blog/css/home.min.css"><script type="application/ld+json">
