--- a/offline/index.html
+++ b/offline/index.html
@@ -7,14 +7,9 @@
 <meta name=apple-mobile-web-app-title content="KururuTechBlog"><meta name=theme-color content="#ffffff"><meta name=msapplication-TileColor content="#da532c"><meta name=google-site-verification content="twGvePo9HJ-p7TvsvuVzFVC1fnVGRCkQ-MIxc0X4U90">
 <link rel="shortcut icon" type=image/x-icon href=/kururu-blog/favicon.ico>
 <link rel=icon type=image/png sizes=32x32 href=/kururu-blog/favicon-32x32.png>
-<link rel=icon type=image/png sizes=16x16 href=/kururu-blog/favicon-16x16.png><link rel=apple-touch-icon sizes=180x180 href=/kururu-blog/apple-touch-icon.png><link rel=mask-icon href=/safari-pinned-tab.svg color=#5bbad5><link rel=manifest href=/kururu-blog/site.webmanifest><link rel=canonical href=https://rick00kim.github.io/kururu-blog/offline/><link rel=stylesheet href=/kururu-blog/css/home.min.css></head><body><script>(window.localStorage&&localStorage.getItem('theme')?localStorage.getItem('theme')==='dark':'dark'==='auto'?window.matchMedia('(prefers-color-scheme: dark)').matches:'dark'==='dark')&&document.body.setAttribute('theme','dark')</script><div class=wrapper>
+<link rel=icon type=image/png sizes=16x16 href=/kururu-blog/favicon-16x16.png><link rel=apple-touch-icon sizes=180x180 href=/kururu-blog/apple-touch-icon.png><link rel=mask-icon href=/safari-pinned-tab.svg color=#5bbad5><link rel=manifest href=/kururu-blog/site.webmanifest><link rel=canonical href=https://rick00kim.github.io/kururu-blog/offline/><link rel=stylesheet href=/kururu-blog/css/home.min.css></head><body><script>(window.localStorage&&localStorage.getItem("theme")?localStorage.getItem("theme")==="dark":"dark"==="auto"?window.matchMedia("(prefers-color-scheme: dark)").matches:"dark"==="dark")&&document.body.setAttribute("theme","dark")</script><div class=wrapper>
 <main class=main>
 <div class=container><article id=content-404>
-<h2>Offline</h2>
-<p>You're offline. Check your internet connection.</p>
-<a href=/kururu-blog/ title=Home>Home</a>
+<h2>Offline</h2><p>You're offline. Check your internet connection.</p><a href=/kururu-blog/ title=Home>Home</a>
 <a href=javascript:void(0); title=Back onclick=window.history.back()>Back</a>
-</article></div>
-</main>
-</div>
-</body></html>
+</article></div></main></div></body></html>
