--- a/en/about/index.html
+++ b/en/about/index.html
@@ -151,7 +151,7 @@
             </div>
         </div></div>
     <div class="content exp">
-        <p>I have a strong responsibility for my work(<strong>RESPONSIBILITY</strong>), I always think about improving the quality of the project(<strong>QUALITY</strong>). My MBTI (InWork: <a href="https://www.16personalities.com/enfj-personality" target="_blank" rel="noopener noreffer">ENFJ</a>, InUsual: <a href="https://www.16personalities.com/infp-personality" target="_blank" rel="noopener noreffer">INFP</a>)</p>
+        <p>I have a strong responsibility for my work(<strong>RESPONSIBILITY</strong>), I always think about improving the quality of the project(<strong>QUALITY</strong>). My MBTI (InWork: <a href="https://www.16personalities.com/enfj-personality" target="_blank" rel="noopener noreffer">ENFJ</a>, InUsual: <a href="https://www.16personalities.com/intp-personality" target="_blank" rel="noopener noreffer">INTP</a>)</p>
     </div>
 </div>
 
@@ -295,7 +295,7 @@ So I am studying Cloud systems through some projects in lately.</p>
         </div>
     </article></div>
             </main>
-            <footer class="footer"><div class="footer-container"><div class="footer-line">Powered by <a href="https://gohugo.io/" target="_blank" rel="noopener noreffer" title="Hugo 0.102.3">Hugo</a> | Theme - <a href="https://github.com/khusika/FeelIt" target="_blank" rel="noopener noreffer" title="FeelIt 1.0.1"><i class="fas fa-hand-holding-heart fa-fw"></i> FeelIt</a>
+            <footer class="footer"><div class="footer-container"><div class="footer-line">Powered by <a href="https://gohugo.io/" target="_blank" rel="noopener noreffer" title="Hugo 0.103.0">Hugo</a> | Theme - <a href="https://github.com/khusika/FeelIt" target="_blank" rel="noopener noreffer" title="FeelIt 1.0.1"><i class="fas fa-hand-holding-heart fa-fw"></i> FeelIt</a>
         </div><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2022</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/kururu-blog/about">Rick_Kim</a></span></div>
 </div>
 </footer>
