deploy: bcedc98cb7e7aeef40e47f5b1637b8f84edaf61d

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -7,10 +7,10 @@
         <title>Who is KURURU - KURURU Blog</title><meta name="description" content="Welcome to Kururu blog"><meta property="og:title" content="Who is KURURU" />
 <meta property="og:description" content="SUMMARY Hello, My name is Kuhyun Kim.
 I worked for system engineer in Japan.
-I have been worked 3 years in develop team.
+I had been worked 3 years in develop team.
 I was implement web application; API, view and Batch application. Both using Java and Spring framework.
-And I&rsquo;m current working in Operation team.
-I mainly do support for Develop teams, server monitoring, writing script for automation and Release to production system.
+And I was worked in Operation team.
+I mainly did support for Develop teams, server monitoring, writing script for automation and Release to production system.
 Because of my current work environment, I am comfortable working on Linux or Unix systems more than Windows system." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://rick00kim.github.io/kururu-blog/en/about/" /><meta property="article:section" content="" />
@@ -21,10 +21,10 @@ Because of my current work environment, I am comfortable working on Linux or Uni
 <meta name="twitter:title" content="Who is KURURU"/>
 <meta name="twitter:description" content="SUMMARY Hello, My name is Kuhyun Kim.
 I worked for system engineer in Japan.
-I have been worked 3 years in develop team.
+I had been worked 3 years in develop team.
 I was implement web application; API, view and Batch application. Both using Java and Spring framework.
-And I&rsquo;m current working in Operation team.
-I mainly do support for Develop teams, server monitoring, writing script for automation and Release to production system.
+And I was worked in Operation team.
+I mainly did support for Develop teams, server monitoring, writing script for automation and Release to production system.
 Because of my current work environment, I am comfortable working on Linux or Unix systems more than Windows system."/>
 <meta name="application-name" content="KururuTechBlog">
 <meta name="apple-mobile-web-app-title" content="KururuTechBlog"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><meta name="google-site-verification" content="twGvePo9HJ-p7TvsvuVzFVC1fnVGRCkQ-MIxc0X4U90" />
@@ -170,10 +170,10 @@ Because of my current work environment, I am comfortable working on Linux or Uni
 </div><div class="single-card"><div class="content" id="content"><h2 id="summary">SUMMARY</h2>
 <p>Hello, My name is Kuhyun Kim.</p>
 <p>I worked for system engineer in Japan.</p>
-<p>I have been worked 3 years in develop team.</p>
+<p>I had been worked 3 years in develop team.</p>
 <p>I was implement web application; API, view and Batch application. Both using Java and Spring framework.</p>
-<p>And I&rsquo;m current working in Operation team.</p>
-<p>I mainly do support for Develop teams, server monitoring, writing script for automation and Release to production system.</p>
+<p>And I was worked in Operation team.</p>
+<p>I mainly did support for Develop teams, server monitoring, writing script for automation and Release to production system.</p>
 <p>Because of my current work environment, I am comfortable working on Linux or Unix systems more than Windows system.</p>
 <p>I&rsquo;m interested in new IT technology and I am very experimental.</p>
 <p>So I am studying Cloud systems through some projects in lately.</p>
