--- a/en/about/index.html
+++ b/en/about/index.html
@@ -176,7 +176,7 @@ Because of my current work environment, I am comfortable working on Linux or Uni
 <p>I mainly did support for Develop teams, server monitoring, writing script for automation and Release to production system.</p>
 <p>Because of my current work environment, I am comfortable working on Linux or Unix systems more than Windows system.</p>
 <p>I&rsquo;m interested in new IT technology and I am very experimental.</p>
-<p>So I am current working for devops in Korea</p>
+<p>So I am current working for devops in Korea.</p>
 <p>I mainly use about AWS cloud system.</p>
 <h2 id="work-history">WORK HISTORY</h2>
 <table>
@@ -195,7 +195,7 @@ Because of my current work environment, I am comfortable working on Linux or Uni
 <td>Present</td>
 <td>AFI (Thebackend)</td>
 <td>⚙️ Devops engineer</td>
-<td>Design and Develop Backend module</td>
+<td>Design and Develop Backend modules</td>
 </tr>
 <tr>
 <td></td>
