deploy: 010de3afe81a3ec484a2cac891ce8c51e50dd665

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -105,6 +105,18 @@ Cancel
 <div class=param>
 <div class=skill>
 <h2>SKILLS</h2><div class=box>
+<p>Javascript</p>
+<p>90%</p>
+<div class=bar>
+<div class=level style=width:90%></div>
+</div>
+</div><div class=box>
+<p>NodeJS</p>
+<p>90%</p>
+<div class=bar>
+<div class=level style=width:90%></div>
+</div>
+</div><div class=box>
 <p>JAVA</p>
 <p>90%</p>
 <div class=bar>
@@ -121,12 +133,6 @@ Cancel
 <p>80%</p>
 <div class=bar>
 <div class=level style=width:80%></div>
-</div>
-</div><div class=box>
-<p>Javascript</p>
-<p>70%</p>
-<div class=bar>
-<div class=level style=width:70%></div>
 </div>
 </div><div class=box>
 <p>ReactJS</p>
