--- a/about/index.html
+++ b/about/index.html
@@ -93,6 +93,18 @@ Cancel
 <div class=param>
 <div class=skill>
 <h2>SKILLS</h2><div class=box>
+<p>Javascript</p>
+<p>90%</p>
+<div class=bar>
+<div class=level style=width:90%></div>
+</div>
+</div><div class=box>
+<p>NodeJS</p>
+<p>90%</p>
+<div class=bar>
+<div class=level style=width:90%></div>
+</div>
+</div><div class=box>
 <p>JAVA</p>
 <p>90%</p>
 <div class=bar>
@@ -109,12 +121,6 @@ Cancel
 <p>80%</p>
 <div class=bar>
 <div class=level style=width:80%></div>
-</div>
-</div><div class=box>
-<p>Javascript</p>
-<p>70%</p>
-<div class=bar>
-<div class=level style=width:70%></div>
 </div>
 </div><div class=box>
 <p>ReactJS</p>
