deploy: 5b52f3ae79fbab5768e2cd2f042c275c388145d1

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -9,7 +9,7 @@ I started working for system engineer in Japan.
 I had been worked 4 years in develop team.
 I was implement web application; API, view and Batch application. Both using Java and Spring framework.
 And I was worked in Develop team and Operation team.
-I mainly did support for Develop teams, server monitoring, writing script for automation and Release to production system.
+I mainly do support for Develop teams, server monitoring, writing script for automation and Release to production system.
 Because of my current work environment, I am comfortable for working on Linux or Unix systems more than Windows system.">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://rick00kim.github.io/kururu-blog/en/about/"><meta property="article:section" content>
@@ -22,7 +22,7 @@ I started working for system engineer in Japan.
 I had been worked 4 years in develop team.
 I was implement web application; API, view and Batch application. Both using Java and Spring framework.
 And I was worked in Develop team and Operation team.
-I mainly did support for Develop teams, server monitoring, writing script for automation and Release to production system.
+I mainly do support for Develop teams, server monitoring, writing script for automation and Release to production system.
 Because of my current work environment, I am comfortable for working on Linux or Unix systems more than Windows system.">
 <meta name=application-name content="KururuTechBlog">
 <meta name=apple-mobile-web-app-title content="KururuTechBlog"><meta name=theme-color content="#ffffff"><meta name=msapplication-TileColor content="#da532c"><meta name=google-site-verification content="twGvePo9HJ-p7TvsvuVzFVC1fnVGRCkQ-MIxc0X4U90">
@@ -151,7 +151,7 @@ Cancel
 <p>I had been worked 4 years in develop team.</p>
 <p>I was implement web application; API, view and Batch application. Both using Java and Spring framework.</p>
 <p>And I was worked in Develop team and Operation team.</p>
-<p>I mainly did support for Develop teams, server monitoring, writing script for automation and Release to production system.</p>
+<p>I mainly do support for Develop teams, server monitoring, writing script for automation and Release to production system.</p>
 <p>Because of my current work environment, I am comfortable for working on Linux or Unix systems more than Windows system.</p>
 <p>I&rsquo;m interested in new IT technology and I am very experimental.</p>
 <p>So I am current working for devops engineer in Korea.</p>
