deploy: 39d5e9f53b01d20be848d8b19ca5ab97628e8753

--- a/about/index.html
+++ b/about/index.html
@@ -178,9 +178,9 @@ Cancel
 Cloud or INFRA
   AWS, GCP, OCI, RedHat(On-premise)
 Language
-  NodeJS(Express.js), Bash, Python, Java, Spring framework, Oracle, JavaScript, React, BigQuery
+  NodeJS(Express.js), Bash, Python, Java, Spring framework, Oracle, JavaScript, React
 Tools
-  Slack, Github, Docker, JFrog, JIRA, Confluence, Notion, Kubernetes, Terraform
+  Slack, Github, Docker, JFrog, JIRA, Confluence, Notion, Kubernetes, Terraform, BigQuery
 </code></pre>
 </div>
 </div>
