deploy: 2802099f356d0041e4d3b765cb7ea5d1af205255

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -154,7 +154,7 @@ Cancel
 <p>I mainly do support for Develop teams, server monitoring, writing script for automation and Release to production system</p>
 <p>Because of my current work environment, I am comfortable for working on Linux or Unix systems more than Windows system</p>
 <p>I&rsquo;m interested in new IT technology and I am very experimental</p>
-<p>Then, I am current working for devops engineer in Korea.</p>
+<p>Then, I am current working for devops engineer in Korea</p>
 <p>I mainly devleop Game Server using cloud systems (AWS, GCP)</p>
 <h2 id=work-history>WORK HISTORY</h2>
 <h3 id=afihttpswwwafidevcom><a href=https://www.afidev.com/ target=_blank rel="noopener noreffer">AFI</a></h3>
