deploy: f72cc7fd13cd2df805e754f4967c4d02decb6cfa

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -202,7 +202,7 @@ Language
 Database
   Oracle, MySQL, MongoDB, AWS DynamoDB, Redis, BigQuery(for datawarehouse)
 ETC
-  Grpc, socket programmin
+  Grpc, socket programming
 Tools
   Slack, Github, Docker, JFrog, JIRA, Confluence, Notion, Kubernetes, Terraform
 </code></pre>
