deploy: ea0c76f42ed8354cfca3a7c4dc95963e78bcb779

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -205,7 +205,7 @@ Language
 Database
   Oracle, MySQL, MongoDB, AWS DynamoDB, Redis, BigQuery(for datawarehouse), ElasticSearch(For search engine)
 ETC
-  Grpc, socket programming
+  GRPC, socket programming
 Tools
   Slack, Github, Docker, JFrog, JIRA, Confluence, Notion, Kubernetes, Terraform
 </code></pre>
