deploy: 50190ec291b56633728b64ed2fc55dfc3713e6b8

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -163,7 +163,7 @@ Cancel
 <pre><code>🔆 2022/09 ~ Present
   Design and Develop Backend modules
   Troubleshooting, resolve issues from client's request
-  Establish and manage service monitoring systems (APM, Server Resource Monitoring), emergency response
+  Establish and manage service monitoring systems (APM, Server Resource Monitoring), emergency responses
   Establish and manage the development environment for the development team to proceed smoothly
   Automate build, test, and deployment with CI/CD (GitHub, SVN, Jenkins)
   Test module, Building CI/CD pipelines, improvement
