deploy: 9d015598ec9a0784ea65b70776e48483b31bd17b

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -155,7 +155,7 @@ Cancel
 <p>Because of my current work environment, I am comfortable for working on Linux or Unix systems more than Windows system.</p>
 <p>I&rsquo;m interested in new IT technology and I am very experimental.</p>
 <p>And I am current working for devops engineer in Korea.</p>
-<p>I mainly devleop Game Server(Realtime) using cloud systems (AWS, GCP), estimate and save cost of cloud system.</p>
+<p>I mainly develop Game Server(Realtime) using cloud systems (AWS, GCP), estimate and save cost of cloud system.</p>
 <p>I build own system more safe and reliable.</p>
 <p>I also work for bridge enginner(JPN-KOR).</p>
 <h2 id=work-history>WORK HISTORY</h2>
